WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89971
[GTK] New lines automatically and repeatedly added to list items in Etherpad
https://bugs.webkit.org/show_bug.cgi?id=89971
Summary
[GTK] New lines automatically and repeatedly added to list items in Etherpad
Joanmarie Diggs
Reported
2012-06-26 04:53:06 PDT
Steps to reproduce: 1. View an Etherpad document (Or create one on a free installation like
https://etherpad.mozilla.org/
) 2. Move the caret to a bulleted list item (or start a new bulleted list) Results: A bunch of new, empty bulleted list items get added to the document as if you were pressing and holding Return. Notes: Xan commented [1]: "This is crazy, and probably a WebKit bug :)". Confirmed. I can reproduce this in the GtkLauncher. But using WebKit nightly for OS X, things work as expected. Ditto from Chromium for Linux. So it seems to be something special in WebKitGtk.(??) [1]
https://bugzilla.gnome.org/show_bug.cgi?id=655834#c1
Attachments
Patch
(1.71 KB, patch)
2012-07-30 15:31 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Wingo
Comment 1
2012-06-26 04:59:23 PDT
Related to
bug 49288
?
Simon Pena
Comment 2
2012-06-28 04:34:18 PDT
(In reply to
comment #1
)
> Related to
bug 49288
?
The fix for that bug has landed, and I'm unable to reproduce this bug after that commit. I will confirm that I was previously able to reproduce it without that bugfix: if that's the case, we can close this bug.
Simon Pena
Comment 3
2012-06-28 05:01:12 PDT
(In reply to
comment #2
)
> (In reply to
comment #1
) > > Related to
bug 49288
? > > The fix for that bug has landed, and I'm unable to reproduce this bug after that commit. I will confirm that I was previously able to reproduce it without that bugfix: if that's the case, we can close this bug.
Sorry for the noise: I've been unable to reproduce the bug also without the fix for
bug #49288
. As far as my configuration goes, the bug could still be there.
Joanmarie Diggs
Comment 4
2012-06-28 05:10:44 PDT
I'll rebuild WebKitGtk and try again.
Joanmarie Diggs
Comment 5
2012-06-28 14:04:14 PDT
So I just built WebKitGtk from git master in my jhbuild-built environment. I can still reproduce the problem in GtkLauncher.
Martin Robinson
Comment 6
2012-07-30 15:31:38 PDT
Created
attachment 155384
[details]
Patch
Ryosuke Niwa
Comment 7
2012-07-30 16:38:49 PDT
Comment on
attachment 155384
[details]
Patch rs=me.
WebKit Review Bot
Comment 8
2012-07-30 23:53:05 PDT
Comment on
attachment 155384
[details]
Patch Clearing flags on attachment: 155384 Committed
r124177
: <
http://trac.webkit.org/changeset/124177
>
WebKit Review Bot
Comment 9
2012-07-30 23:53:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug