[GTK] New lines automatically and repeatedly added to list items in Etherpad https://bugs.webkit.org/show_bug.cgi?id=89971

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-07-30
Reviewed by Ryosuke Niwa.

Disable the deletion UI by default. This UI, which was enabled as a side-effect
of the addition of the private editing API, seems to expose a bug in Etherpad
which causes the continuous insertion of bullet points.

* WebCoreSupport/EditorClientGtk.cpp:
(WebKit::EditorClient::shouldShowDeleteInterface): Disable the deletion UI by default.

Canonical link: https://commits.webkit.org/110552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124177 268f45cc-cd09-0410-ab3c-d52691b4dbfc